--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 .idea
 venv
 __pycache__
-client_secret.json
-confidential.py
-api_key
+
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+sdist
+develop-eggs
+.installed.cfg
