--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,2 @@
-beautifulsoup4==4.7.1
-dash==0.40.0
-Flask==1.0.2
-google-api-python-client==1.7.8
-numpy==1.16.2
-pandas==0.24.1
-plotly==3.7.1
-
+--index-url https://pypi.python.org/simple/
+-e .
